apps/baz/manifests/l5d-routes-in.yaml
# HTTP Inbound routes
# https://linkerd.io/2-edge/features/httproute/#inbound-and-outbound-httproutes
---
# prefix /
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: baz-root-inbound
  namespace: default
spec:
  parentRefs:
    - name: baz
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
---
# exact /foo/bar
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: baz-foo-bar-inbound
  namespace: default
spec:
  parentRefs:
    - name: baz
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
        - path:
            type: Exact
            value: "/foo/bar"
