apps/baz/manifests/l5d-auth-routes.yaml
# Route Authorization
# https://linkerd.io/2-edge/tasks/configuring-per-route-policy/
---
# auth - baz
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: baz-foo-bar-policy
  namespace: default
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: baz-foo-bar-inbound-route
  requiredAuthenticationRefs:
    - name: baz-bar-authn
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
